# sm64-audio-manager

./: .gitignore  README.md  linux.sh  main.py  pyproject.toml  windows.bat
src/: aiff.py  convert.py  gui.py  m64.py  main.py  misc.py  seq00.py  sfx.py  soundbank.py
src/gui/: gui_dynamic_table.py  gui_main.py  gui_misc.py  gui_sample_import.py  main.py  music.py  resample.py  tab_convert.py  tab_music.py  tab_sfx.py  tab_soundbank.py
